# HyperTensor

./: .dockerignore  .gdbinit  .gitignore  AUDIT_REPORT.md  BENCHMARK_REPORT.md  CHANGELOG-commercial.md  CHANGELOG.md  CMakeLists.txt  COMPREHENSIVE_RESULTS.md  DASHBOARD.md  Dockerfile  Install-Geod.ps1  LICENSE  MASTER_AUDIT.md  MILLENNIUM_ROADMAP.md  Makefile  Modelfile  NEGATIVE_RESULTS_NEXT_STEPS.md  PAPER_READINESS_AUDIT.md  README.md  REPRODUCTION.md  STRUCTURE.md  WHITEPAPER.md  XI_XV_GAP_ANALYSIS.md  ab_out.txt  ab_out2.txt  ab_out3.txt  ab_out4.txt  ab_out5.txt  ab_out6.txt  ab_out7.txt  ab_stdout.txt  add_logo_header.ps1  apply_vis_hooks.py  axex_compress_test.txt  axiom_beta3_report.json  axiom_beta4_proto_report.json  baseline_run_out.txt  bench_70b.sh  bench_axiom_fast_gpu.json  (+142 more)
.ec2_backup/: acm_prototype.py  agt_scale_ec2.py  agt_v3.py  agt_zeta.py  agt_zeta_v2.py  behavioral_probe_15b.py  bilateral_definitive.py  bilateral_ugt.py  ccm_prototype.py  ccm_v2.py  ccm_v3.py  ccm_v4.py  close_all_gaps.py  close_xi_bilateral_ec2.py  close_xi_xii_7b_l40s.py  close_xi_xii_final_v2.py  close_xii_native_ec2.py  cog_expansion.py  cog_expansion_v2.py  cog_optimal.py  cog_safe_integrated.py  combined_integration.py  e2e_pipeline.py  ecm_prototype.py  ecm_v2.py  fix_ec2_paths.py  gom_prototype.py  hodge_prototype.py  hsm_prototype.py  hsm_v2.py  hyper_chat.py  interactive_chat.py  isagi_live.py  multi_snipe.py  native_15b.py  native_15b_v2.py  native_7b_final.py  native_long_train_ec2.py  native_ppl_parity.py  ogd_cog_50.py  (+13 more)
ARXIV_SUBMISSIONS/: Makefile  PEER_REVIEW_2026-05-09.md  README.md  _bodies.tex  addendum_behavioral_residue.tex  cover_letter.tex  jury_proof.tex  mathematician_handoff.tex  strip_comments.sh  unified_manuscript.aux  unified_manuscript.out  unified_manuscript.tex  unified_manuscript.toc  volume.tex  volume_extended.aux  volume_extended.bbl  volume_extended.bcf  volume_extended.blg  volume_extended.out  volume_extended.run.xml  volume_extended.tex  volume_extended.tex.bak
WIP/: README.md
arxiv/: Makefile  README.md
axiom_vis/: phase1_manifold.json  phase3_curvature.json
benchmarks/: ugt_coord_extensive.json  ugt_zone_recovery.json  universal_taxonomy.json  universal_taxonomy_h4.json
boot/: boot.asm  entry64.asm  kernel64.ld  linker.ld  linker32.ld  multiboot_stub.asm  uefi_stub.c
data/: README.md  decisions.json  decisions_dim4.json  wikitext2_train_5k.txt
deploy/: .env.example  Dockerfile.ht-repro  README.md  build_native.sh  cibuildwheel.toml  docker-compose.yml  ht-repro.service  nginx.conf
docs/: ARCHITECTURE.md  AUTONOMOUS_AXIOMATIC_SUBSYSTEM_BETA.md  AXIOM_BETA_INTERNAL_DESIGN.md  BENCHMARK_PROTOCOL.md  COMPREHENSIVE_STATE.md  EVOLUTION.md  GEODESSICAL_PLAN.md  GEODESSICAL_WHITEPAPER.md  HANDOFF_TO_PHD.md  HYPER_FORMAT_SPEC.md  MIKU_FORMAT_SPEC.md  MILLENNIUM_PROGRESS.md  OTT_WHITEPAPER.md  PARADIGM_SHIFT_CYCLE.md  PSEUDOCODE_GUIDE.md  RIEMANN_INSIGHTS.md  RIEMANN_PROOF.md  RIEMANN_SOLUTION_EXPLAINED.md  VALIDATION_CYCLE.md  VERIFICATION_STATUS.md  WHITEPAPER.md  WHITEPAPER_DIFFEOMORPHISM.md  WHITEPAPER_READINESS.md  XI_XV_GAP_ANALYSIS.md  _config.yml  explained_terms.txt  graft-database.html  index.html  jury_gtc_explanation.md  robots.txt  sitemap.xml  whitepaper.html
duel_outputs/: living_manifold_proof.json  living_manifold_verification.json
examples/: 1_jury_gate.py  2_gtc_cache.py
host/: api_server.c  api_server.h  gd_daemon.c  gd_daemon.h  hal.c  hal.h  main.c  mcp_server.c  mcp_server.h  web_ui.h
ht_repro/: README.md  __init__.py  __main__.py  api_v1.py  catalog.py  cli.py  config.py  dashboard.py  gpu.py  graft_wrapper.py  install.ps1  install.sh  models.py  pyproject.toml  runner.py  runtime_loader.py  server.py  server_ui.html  setup_wizard.py  storage.py  tools_catalog.py
hypercore/: README.md  __init__.py  geodesic_metric.py  hypercore.c  hypercore.h  pyproject.toml  regime_detector.py
hypercore/hypercore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hyperretro/: AUDIT.md  LICENSE  README.md  __init__.py  __main__.py  certificates.py  cli.py  model_card.py  pyproject.toml  vllm_adapter.py
hyperretro/bench/: __init__.py  __main__.py  real_speculative.py  run.py  spec_decode_sim.py
hyperretro/hf/: __init__.py  activation.py  compress.py  distill.py  eagle_drafter.py  factor_int4.py  factor_quantize.py  factored.py  ffn_compress.py  gguf_export.py  kv_cache_grc.py  openmythos.py  quantize.py
hyperretro/kernels/: __init__.py  cpu_opt.py  gpu.py  portability.py
hyperretro/kernels/csrc/: gemv_dual_q8_0.cpp
hyperretro/kernels/csrc/cpu/: hyperretro_cpu_avx2.c
hyperretro/kernels/csrc/cuda/: _build.py  gemv_dual_q8_0.cu
hyperretro/models/: __init__.py  _compress.py  _export.py  gguf.py  hf.py  om.py  vllm_model.py
hyperretro/vllm/: __init__.py  draft.py
hypersort/: README.md  package.json  pyproject.toml  sort.html
hypersort/.github/workflows/: publish.yml
hypersort/demos/: Demo.java  demo.js  demo.py  sort_comparison.html
hypersort/hypersort/: __init__.py  core.py  gtc.py
hypersort/hypersort.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hypersort/java/com/hypersort/: HyperSort.java  ManifoldConfig.java  SortResult.java
hypersort/javascript/: hypersort.d.ts  hypersort.js
hypersort/tests/: test_hypersort.js  test_hypersort.py
hypertensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hypertensor_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hypertensor_runtime/: MANIFEST.in  README.md  __init__.py  pyproject.toml
legacy/: Makefile  README.md
lib/: jury_gtc_kernel.c
modelfiles/: HITHERTO.modelfile  HORI.modelfile  HORIMIYA-MP.modelfile  HORIMIYA.modelfile  Izumi.modelfile  (+6 more)
runtime/jit/: CMakeLists.txt  arm64_jit.c  arm64_jit.h  llm_jit.c  x86_jit.c  x86_jit.h
scripts/analysis/: README.md  compute_spectra.py  eckart_young_bound.py  export_spectra_for_web.py  pyproject.toml  sink_channel_grc.py  statistical_tests.py
scripts/analysis/hypertensor_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1772 files in other folders)
