[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypertensor"
version = "1.1.0"
description = "Riemannian geometry for transformer compression, speculative decoding, safety, and the Riemann Hypothesis"
authors = [{name = "William 'Nagusame' Ken Ohara Stewart"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
]

[project.scripts]
hyperretro = "hyperretro.cli:main"

[project.optional-dependencies]
torch = ["torch>=2.0"]
full = ["torch>=2.0", "transformers>=4.40", "safetensors>=0.4", "bitsandbytes>=0.43"]
repro = ["numpy>=1.24", "scipy>=1.11", "mpmath>=1.3", "sympy>=1.12"]
om = ["open-mythos"]

[project.urls]
Repository = "https://github.com/NagusameCS/civilized-HyperTensor"
Original = "https://github.com/NagusameCS/HyperTensor"
Study = "https://doi.org/10.5281/zenodo.20077378"
Website = "https://nagusamecs.github.io/HyperTensor"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypercore*", "hyperretro*", "hyperretro.hf*", "hyperretro.models*"]
