[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperretro"
version = "0.1.0"
description = "Retrofit HyperTensor's geometric optimizations into PyTorch / HuggingFace / vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "William Ken Ohara Stewart (NagusameCS)" }]
keywords = ["llm", "compression", "speculative-decoding", "pytorch", "huggingface", "vllm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4",
]

[project.optional-dependencies]
hf = ["transformers>=4.40", "torch>=2.1", "huggingface_hub>=0.20"]
vllm = ["vllm>=0.5"]
bench = ["torch>=2.1", "transformers>=4.40", "datasets>=2.18", "tqdm"]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
hyperretro-compress = "hyperretro.hf.compress:_cli_main"
hyperretro-bench = "hyperretro.bench.run:_cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperretro*"]
