[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hypersort"
version = "0.1.0"
description = "O(1) Instant Sort via Riemannian Comparison Manifold — based on HyperTensor Geometric Jury framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "William Ken Ohara Stewart", email = "nagusamecs@gmail.com" }
]
keywords = [
    "sorting",
    "riemannian-geometry",
    "manifold",
    "geodesic",
    "hyperdimensional",
    "constant-time",
    "o1-sort",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]
all = [
    "numpy>=1.24.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/NagusameCS/HyperTensor"
Repository = "https://github.com/NagusameCS/HyperTensor/tree/main/hypersort"
"Bug Tracker" = "https://github.com/NagusameCS/HyperTensor/issues"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
hypersort = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
